<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SE File Manager</string>
	<string name="sdcard_not_avai">Sdcard is not mounted!</string>
	<string name="add_folder">Add folder</string>
	<string name="list_by">Sort by</string>
	<string name="removable_dir">Removable Drive</string>
	<string name="cancel">Cancel</string>
	<string name="folder_name">Folder name</string>
	<string name="create_folder">Create folder</string>
	<string name="create">Create</string>
	<string name="unname">Unname</string>
	<string name="folder_exist">Folder already exist</string>
	<string name="copy">Copy</string>
	<string name="cut">Cut</string>
	<string name="delete">Delete</string>
	<string name="rename">Rename</string>
	<string name="detail">Detail</string>
	<string name="share">Share</string>
	<string name="new_name">New folder/file name</string>
	<string name="ok">OK</string>
	<string name="paste_here">Paste</string>
	<string name="copying_file">Copying</string>
	<string name="copy_fail">Fail to copy:</string>
	<string name="choose">Choose</string>
	<string name="option">Option</string>
	<string name="file_exist_warning">Files exist:</string>
	<string name="warning">Warning</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="already_home">It is already home directory!</string>
	<string name="press_again_to_exit">Double click to exit!</string>
	<string name="the_following_files">The following files already exist:\n\n</string>
	<string name="deleting_files">Deleting files, please wait...</string>
	<string name="done">done</string>
	<string name="name">Name:</string>
	<string name="last_modif_date">Last modified date:</string>
	<string name="size">Size:</string>
	<string name="contents">Contents:</string>
	<string name="permission">Permission:</string>
	<string name="show_hidden">Show Hidden File</string>
	<string name="setting">Setting</string>
	<string name="searching">Searching</string>
	<string name="enter_filename">Enter the filename you want to search</string>
	<string name="search">Search</string>
	<string name="no_file_found">No file found for </string>
	<string name="search_result">Results for</string>
	<string name="prev_result">Prev rslt</string>
	<string name="prev_results_empty">No previous results</string>
	<string name="sub_direcotry">Search from current directory</string>
	<string name="pdf_viewer_not_found">Sorry, no pdf viewer is found</string>
	<string name="html_viewer_not_found">Sorry, no html viewer is found</string>
	<string name="permission_denial">Can not open this folder, permission denial</string>
	<string name="open_file">Open file</string>
	<string name="open_file_msg">No application is found to open this file.</string>
	<string name="processing">Processing......</string>
	<string name="move_file_fail">Fail to move:</string>
	<string name="fail_to_copy">The following files are failed to copy:\n</string>
	<string name="fail_notice">Fail notice</string>
	<string name="multi_selection">Multi selection</string>
	<string name="save_prev_state">Save Previous State</string>
	<string name="save_prev_state_summary">Save position when you browse to a new directory</string>
	<string name="empty_selection">No file is selected</string>
	<string name="confirm">Confirm</string>
	<string name="delete_message">The following files are to be deleted:\n\n</string>
	<string name="delete_fail">Fail to delete:</string>
	<string name="copy_multi_files_fail">Fail to copy following files:\n\n</string>
	<string name="move_multi_files_fail">Fail to move following files:\n\n</string>
	<string name="new_folder">new folder</string>
	<string name="open_fail">Fail to open</string>
	<string name="overwrite">Overwrite</string>
	<string name="cannot_cpy_to_child">You can not copy/move folder to its child directory</string>
	<string name="hide">Hide</string>
	<string name="back">Back</string>
	<string name="home">Home</string>
	<string name="result">Result:</string>
	<string name="find">Find:</string>
	<string name="moving">Moving</string>
	<string name="exit">Exit</string>
	<string name="extract_here">Extract here</string>
	<string name="extract_to">Extract to ...</string>
	<string name="extracting">Extracting</string>
	<string name="fail">fail</string>
	<string name="compressing">Compressing</string>
	<string name="zip">Zip</string>
	<string name="zip_file_exist_warning">File exist:</string>
	<string name="file_exist_msg">already exist in current directory</string>
	<string name="view_by">View by</string>
	<string name="thumbnail">Thumbnail</string>
	<string name="list">List</string>
	<string name="open_as">Open As...</string>
	<string name="do_the_following">Do the following</string>
	<string name="skip">Skip</string>
	<string name="empty_folder">This is an empty folder</string>
	<string name="send_feed_back">Send Feedback</string>
	<string name="share_action">Complete action using</string>
	<string name="items">items</string>
	<string name="list_with_detail">List with Detail</string>
	<string name="select_all">Select All</string>
	<string name="deselect_all">Deselect All</string>
	<string name="all">All</string>
	
	<!-- Preference -->
	<string name="prefs_removable_title">Set removable drive path</string>
	<string name="prefs_removable_summary">Set the path to access removable drive from action bar.</string>
	<string name="set_removable_path">Set removable path</string>
	<string name="path_exist_msg">Path exists</string>
	<string name="path_not_exiost_msg">Path NOT exists or is NOT a directory</string>
	<string name="path_not_accssable">Path NOT accessable</string>
</resources>
