<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textColor="@color/red"
        android:textSize="13dp" >
    </TextView>

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="@color/search_dialog_text_color"
        android:textSize="17dp" >
    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/last_modif_date"
        android:textColor="@color/red"
        android:textSize="13dp" >
    </TextView>

    <TextView
        android:id="@+id/textView_last_modi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="@color/search_dialog_text_color"
        android:textSize="17dp" >
    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/size"
        android:textColor="@color/red"
        android:textSize="13dp" >
    </TextView>

    <TextView
        android:id="@+id/textView_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="@color/search_dialog_text_color"
        android:textSize="17dp" >
    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/permission"
        android:textColor="@color/red"
        android:textSize="13dp" >
    </TextView>

    <TextView
        android:id="@+id/textView_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="@color/search_dialog_text_color"
        android:textSize="17dp" >
    </TextView>

    <TextView
        android:id="@+id/textView_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/contents"
        android:textColor="@color/red"
        android:textSize="13dp" >
    </TextView>

    <TextView
        android:id="@+id/textView_contents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="@color/search_dialog_text_color"
        android:textSize="17dp" >
    </TextView>

</LinearLayout>